[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://BaseLevel.gd" id="1"]
[ext_resource type="PackedScene" path="res://Goal.tscn" id="2"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1")

[node name="Walls" type="Node2D" parent="."]

[node name="Obstacles" type="Node2D" parent="."]

[node name="Goal" parent="." instance=ExtResource("2")]
position = Vector2(850, 300)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LevelLabel" type="Label" parent="UILayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 60.0
text = "Level Name"
label_settings = SubResource("LabelSettings_1")

[node name="HintLabel" type="Label" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
text = "Hint Text"
horizontal_alignment = 1
vertical_alignment = 1